<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_actitivy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="social.rony.com.firebaseauthdemo.ProfileActitivy">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textViewProfileEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/hintNombreCompleto"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:id="@+id/edittextNombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/hintDireccion"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:id="@+id/edittextDireccion" />


        <Button
            android:text="@string/textGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGuardarProfile"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:text="@string/textlogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogout"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />




    </LinearLayout>
</RelativeLayout>
