<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="social.rony.com.firebaseauthdemo.LoginActivity">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edittextemail"
            android:hint="@string/hint_email"
            android:padding="15dp"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edittextpassword"
            android:layout_width="match_parent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:padding="15dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:text="@string/textlogin"

            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="Si no estás registrado, presiona aquí..."
            android:id="@+id/textviewRegistrarse"
            android:layout_height="match_parent" />



    </LinearLayout>

</RelativeLayout>
